--- a/Style.css
+++ b/Style.css
@@ -15,7 +15,7 @@ body {
 .cabeçalho {
     display: flex;
     flex-direction: row;
-    justify-content: s;
+    justify-content: flex-start;
     padding: 0px;
     margin-bottom: 48px;
     position: fixed;
